# google-genai-agents-course

./: .gitignore  README.md  pyproject.toml
notebooks/: agent-observability-with-plugins.ipynb
